deployments/Kustomize/mongo-api/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: mongo-api
