deployments/Kustomize/mongo-api/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongo-api
spec:
  rules:
  - host: dev-mongo-api.sample.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mongo-api
          servicePort: 80
